--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,33 @@
-# packaging
-pip>=9
-setuptools>=26
-twine
-wheel>=0.29
-
-# data science
-numpy
-pandas
-scikit-learn
-
-# tests/linter
-black
-coverage
-flake8
-pytest
-yapf
-
-# API
-gcsfs
-google-cloud-storage
-mlflow
-s3fs
-
-# utilities
-six>=1.14
-joblib
-memoized-property
-termcolor
+alembic==1.7.4
+bleach==4.1.0
+blinker==1.4
+click==8.0.3
+dnspython==2.1.0
+email-validator==1.1.3
+Flask==2.0.2
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
+Flask-PageDown==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.8.1
+importlib-resources==5.2.3
+itsdangerous==2.0.1
+Jinja2==3.0.2
+Mako==1.1.5
+Markdown==3.3.4
+MarkupSafe==2.0.1
+packaging==21.0
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-dotenv==0.19.1
+six==1.16.0
+SQLAlchemy==1.4.25
+webencodings==0.5.1
+Werkzeug==2.0.2
+WTForms==2.3.3
+zipp==3.6.0
