--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-PageDown==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
 importlib-resources==5.2.3
@@ -22,6 +23,7 @@ Mako==1.1.5
 Markdown==3.3.4
 MarkupSafe==2.0.1
 packaging==21.0
+psycopg2-binary==2.9.1
 PyJWT==2.3.0
 pyparsing==2.4.7
 python-dotenv==0.19.1
